force-app/main/default/objects/A2A_Task_Event__e/A2A_Task_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for A2A task status updates and streaming</description>
    <label>A2A Task Event</label>
    <pluralLabel>A2A Task Events</pluralLabel>
</CustomObject>