force-app/main/default/objects/A2A_Task_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of event (status_update, artifact_update, message, etc.)</description>
    <label>Event Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>