force-app/main/default/objects/A2A_Task_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Task status for status update events</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>