force-app/main/default/objects/A2A_Task_Event__e/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>The ID of the A2A task</description>
    <label>Task ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>